Added desktop sizing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,13 @@
 /* for mobile */
 
 html {
-    height: 100%;
-    width: 100%;
-  }
+}
 
 body {
     margin: 0 auto;
     font-size: 1.8rem;
     line-height: 1.4;
     font-family: 'Source Code Pro', monospace;
-    width: auto;
     overflow-x: hidden;
   }
 
@@ -39,7 +36,7 @@ a {
     bottom: 0;
     right: 0;
     left: 0;
-    width: auto;
+    width: 100vw;
     height: auto;
     z-index: -3;
 
@@ -53,7 +50,7 @@ a {
     top: 0;
     left: 0;
     height: 80px;
-    width: 100%;
+    width: 100vw;
     z-index: 101;
   }
 .nav::after {
@@ -61,7 +58,7 @@ a {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 100vw;
       height: 100%;
       background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
       opacity: 0.8;
@@ -103,16 +100,18 @@ li {
 
 .section {
     height: 100vh;
-    width: auto;
+    width: 100vw;
     padding: 90px 30px 30px;
   }
 
 .dark-back {
     background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
+
   }
 
 .white-back {
     background-color: var(--main-grey);
+    padding: 0;
   }
 
 #welcome-section {
@@ -131,12 +130,13 @@ li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
     opacity: 0.8;
     mix-blend-mode: multiply;
     z-index: 1;
+      padding: 0;
   }
 
 #welcome-section > * {
@@ -183,11 +183,14 @@ li {
 
 #projects {
     height: auto;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 
 .heading {
-    margin: 10px auto 50px auto;
-    font-size: 2rem;
+    margin: 0 auto 50px auto;
+    font-size: 1.8rem;
     height: 5%;
     text-align: center;
   }
@@ -200,7 +203,7 @@ li {
     grid-gap: 4rem;
     width: 100%;
     max-width: 375px;
-    margin: 0 auto 4rem auto;
+    margin: 0 auto 0 auto;
   }
 
 .project-tile {
@@ -237,15 +240,11 @@ li {
   }
 
   /*Contact page and footer*/
-#contact-and-footer {
-    height: 110vh;
-    width: 100vw;
-    background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-  }
-
 #contact {
+    background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
     height: auto;
-    padding-top: 30px;
+    width: 100vw;
+    padding-top: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -257,15 +256,19 @@ li {
   }
 
 #contact-content h1 {
-    margin-bottom: 50px;
-    margin-top: 150px;
+    margin: 60px auto 50px auto;
   }
+  #call-action {
+        position: relative;
+        right: 20px;
+    }
 
 .icon-grid {
     display: grid;
-    grid-gap: 1rem;
-    justify-content: center;
+    grid-gap: 0.8rem;
+    justify-content: flex-start;
     align-items: center;
+    margin-bottom: 20px;
   }
 
 .icons {
@@ -287,8 +290,7 @@ li {
   }
 
 footer {
-    height: 10vh;
-    position: absolute;
+    height: 8vh;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -296,10 +298,6 @@ footer {
     background-color: transparent;
   }
 
-footer p {
-    font-size: 1rem;
-    opacity: 0.5;
-  }
 
 #legal-text {
    font-size: 1rem;
@@ -317,197 +315,23 @@ footer p {
   }
 
 
-
-
 /* desktop app */
 
 @media only screen and (min-width: 768px) {
-
-  html {
-    height: 100%;
-    width: 100%;
-  }
-
-  body {
-    margin: 0 auto;
-    font-size: 1.8rem;
-    line-height: 1.4;
-    font-family: 'Source Code Pro', monospace;
-    width: auto;
-    overflow-x: hidden;
-  }
-
-
-  h1 {
-    color: var(--main-white);
-    font-size: 6rem;
-    font-weight: 500;
-    text-align: center;
-  }
-
-  h2 {
-    color: var(--main-white);
-    text-align: center;
-    font-weight: 400;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-
-  .nav::before {
-    content: "";
-    background-image: url("../images/honeycombog.jpg");
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: auto;
-    height: auto;
-    z-index: -3;
-
-  }
-
-    .nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 80px;
-    width: 100%;
-    z-index: 101;
-  }
-    .nav::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-      opacity: 0.8;
-      mix-blend-mode: multiply;
-      z-index: 1;
+    html {
+        width: 100%;
+        height: 100%
     }
-}
+    h1 {
+    font-size: 6rem;
+    }
 
-  .nav > * {
-    z-index: 102;
-  }
-
-
-  li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-weight: 500;
-  }
-
-
-  .nav-list {
-    display: flex;
-    margin-right: 2rem;
-  }
-
-  .nav-link {
-    text-decoration: none;
-    color: var(--main-orange);
-    margin-left: 25px;
-
-  }
-
-  .nav-link:hover {
-    text-decoration: underline;
-    color: var(--main-orange);
-
-  }
-
-  .section {
-    height: 100vh;
-    width: auto;
-    padding: 90px 30px 30px;
-  }
-
-  .dark-back {
-    background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-  }
-
-  .white-back {
-    background-color: var(--main-grey);
-  }
-
-  #welcome-section {
-    padding: 0;
-    background-color: var(--main-blue);
-    background-image: url("../images/honeycombog.jpg");
-    opacity: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-  }
-
-  #welcome-section::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-    opacity: 0.8;
-    mix-blend-mode: multiply;
-    z-index: 1;
-  }
-
-  #welcome-section > * {
-    z-index: 100;
-  }
-
-  #welcome-text {
-    filter: contrast(100%);
-  }
-
-  #welcome-text h1 {
-    margin-bottom: 0;
-  }
-
-  #welcome-section p {
-    font-size: 2.5rem;
-    color: var(--main-red);
-    margin-top: 14px;
-    text-align: start;
-  }
-
-
-  .orange {
-    color: var(--main-orange);
-  }
-
-  .red {
-    color: var(--main-red);
-  }
-
-  .white {
-    color: var(--main-white);
-  }
-
-  .purple {
-    color: var(--main-purple)
-  }
-
-  .dark-red {
-    color: #E9315D;
-  }
 
   /*Project Section*/
   .heading {
-    margin: 0 auto 60px auto;
-  }
+      margin: 0 auto 60px auto;
+      font-size: 4rem;
+    }
 
   .projects-grid {
     display: grid;
@@ -517,126 +341,33 @@ footer p {
     max-width: 1280px;
     margin: 0 auto 6rem auto;
 
-
-  }
-
-  .project-tile {
-    height: 60vh;
-    width: 40vh;
-    text-align: center;
-    background-color: var(--main-blue);
-    box-shadow: 1px 4px 6px rgb(0 0 0 / 80%);
-    border-radius: 6px;
-  }
-
-  .project-image {
-    height: calc(100% - 6.8rem);
-    width: 100%;
-    object-fit: cover;
-    display: block;
-    border-radius: 2px;
-  }
-
-  .project-title {
-    font-size: 2rem;
-    padding: 2rem 0.5rem;
-    color: var(--main-white);
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  #project1 {
-    display: block;
-
-  }
-
-  #angela-image {
-    object-position: top;
-  }
-
-
-  #project2 {
-    display: block;
-  }
-
-  #algovibes-image {
-    object-position: right;
-
-  }
-
-  #project3 {
-    display: block;
-
-  }
-
-  #project4 {
-    display: block;
-    background-color: var(--main-blue);
   }
 
   /*Contact page and footer*/
-  #contact-and-footer {
-    height: 110vh;
-    width: 100vw;
-    background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-  }
 
   #contact {
-    height: 100vh;
-    padding-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+      height: 100vh;
   }
 
-
   #contact p {
-    color: var(--main-white);
     margin-left: 3px;
-
   }
 
   #contact-content h1 {
     margin-bottom: 30px;
-  }
+    }
 
   .icon-grid {
     display: flex;
-    justify-content: center;
-    align-items: center;
-
   }
 
   .icons {
     height: 40px;
     width: 40px;
     margin: 0 5px 0 30px;
-    filter: invert(100%)
   }
-
-  .icon-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-
-  }
-
-  footer {
-    height: 10vh;
-    position: absolute;
-    width: 100%;
-    background-color: transparent;
-  }
-
-  footer p {
-    font-size: 1.5rem;
-    opacity: 0.5;
-  }
-
-  #legal-text {
-    float: right;
-    margin-right: 20px;
-  }
+    #call-action {
+        right: 0;
+    }
 
  }
