--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 /* for mobile */
-
 html {
+  width: 100%;
 }
-
 body {
-    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    margin: 0;
     font-size: 1.8rem;
     line-height: 1.4;
     font-family: 'Source Code Pro', monospace;
@@ -36,10 +37,9 @@ a {
     bottom: 0;
     right: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: auto;
     z-index: -3;
-
   }
 
 .nav {
@@ -50,7 +50,7 @@ a {
     top: 0;
     left: 0;
     height: 80px;
-    width: 100vw;
+    width: 100%;
     z-index: 101;
   }
 .nav::after {
@@ -58,10 +58,10 @@ a {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
+      width: 100%;
       height: 100%;
       background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-      opacity: 0.8;
+      opacity: 0.65;
       mix-blend-mode: multiply;
       z-index: 1;
     }
@@ -100,7 +100,7 @@ li {
 
 .section {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     padding: 90px 30px 30px;
   }
 
@@ -130,10 +130,10 @@ li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     background-image: linear-gradient(32deg, #2A485F 10%, var(--main-blue) 90%);
-    opacity: 0.8;
+    opacity: 0.65;
     mix-blend-mode: multiply;
     z-index: 1;
       padding: 0;
@@ -208,7 +208,7 @@ li {
 
 .project-tile {
     height: 60vh;
-    width: 40vh;
+    width: 250px;;
     text-align: center;
     background-color: var(--main-blue);
     box-shadow: 1px 4px 6px rgb(0 0 0 / 80%);
@@ -340,8 +340,13 @@ footer {
     width: 100%;
     max-width: 1280px;
     margin: 0 auto 6rem auto;
-
   }
+  
+  .projects-tile {
+   width: 20vw;
+  }
+
+}
 
   /*Contact page and footer*/
 
